force-app/main/default/objects/BusinessAccount/fields/PMC_SS_Offerings__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Offerings__c</fullName>
    <description>Picklist of Offerings dependent on Segmentation</description>
    <label>Offerings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>PMC_SS_Segmentation__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Complaint Resolution - &lt; 15 days</fullName>
            </value>
            <value>
                <fullName>Complaint Resolution - &lt; 20 days</fullName>
            </value>
            <value>
                <fullName>Complaint Resolution - &lt;30 days</fullName>
            </value>
            <value>
                <fullName>Complaint Resolution - &lt; 30 days</fullName>
            </value>
            <value>
                <fullName>Complaint Resolution - &lt; 45 days</fullName>
            </value>
            <value>
                <fullName>Contracts / BPAs - Custom</fullName>
            </value>
            <value>
                <fullName>Contracts / BPAs - Custom Offered</fullName>
            </value>
            <value>
                <fullName>Contracts / BPAs - None</fullName>
            </value>
            <value>
                <fullName>Contracts / BPAs - Standard</fullName>
            </value>
            <value>
                <fullName>Dedicated Account Management - Account Team</fullName>
            </value>
            <value>
                <fullName>Dedicated Account Management - Dedicated</fullName>
            </value>
            <value>
                <fullName>Dedicated Account Management - Select</fullName>
            </value>
            <value>
                <fullName>Dedicated Account Management - Shared</fullName>
            </value>
            <value>
                <fullName>Dedicated Customer Service - Dedicated</fullName>
            </value>
            <value>
                <fullName>Dedicated Customer Service - Online</fullName>
            </value>
            <value>
                <fullName>Dedicated Customer Service - Shared</fullName>
            </value>
            <value>
                <fullName>Exclusive Space - Available</fullName>
            </value>
            <value>
                <fullName>Exclusive Space - None</fullName>
            </value>
            <value>
                <fullName>Exclusive Space - Select</fullName>
            </value>
            <value>
                <fullName>Incentives - Available</fullName>
            </value>
            <value>
                <fullName>Incentives - Limited</fullName>
            </value>
            <value>
                <fullName>Incentives - Limited/None</fullName>
            </value>
            <value>
                <fullName>Incentives - Offered</fullName>
            </value>
            <value>
                <fullName>Incentives - Select</fullName>
            </value>
            <value>
                <fullName>Incentives - X1</fullName>
            </value>
            <value>
                <fullName>Incentives - X2</fullName>
            </value>
            <value>
                <fullName>Incentives - X3</fullName>
            </value>
            <value>
                <fullName>Pricing - Directionally Advantaged</fullName>
            </value>
            <value>
                <fullName>Pricing - Directionally Discounted</fullName>
            </value>
            <value>
                <fullName>Pricing - Directionally Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>