force-app/main/default/objects/BusinessAccount/fields/PMC_SS_OpportunitiesPlan__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OpportunitiesPlan__c</fullName>
    <description>Opportunities for the Account (not Opportunity object)</description>
    <label>Opportunities (Plan)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>