force-app/main/default/objects/BusinessAccount/fields/PMC_SS_PayerContact__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_PayerContact__c</fullName>
    <label>Payer Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>