force-app/main/default/objects/BusinessAccount/fields/PMC_SS_POBox__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_POBox__c</fullName>
    <label>PO Box</label>
    <length>10</length>
    <type>Text</type>
</CustomField>