force-app/main/default/objects/BusinessAccount/fields/PMC_SS_Property_farm_name__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Property_farm_name__c</fullName>
    <label>Property/farm name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>