force-app/main/default/objects/BusinessAccount/fields/PMC_SS_RUC__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_RUC__c</fullName>
    <label>RUC</label>
    <length>35</length>
    <type>Text</type>
</CustomField>