force-app/main/default/objects/BusinessAccount/fields/PMC_SS_SalesDirector__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SalesDirector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>States the Sales Director</description>
    <label>Sales Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>