force-app/main/default/objects/BusinessAccount/fields/PMC_SS_SalesRegion__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SalesRegion__c</fullName>
    <description>update values</description>
    <label>Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AL00</fullName>
                <label>AL00 - Maceió</label>
            </value>
            <value>
                <fullName>AM01</fullName>
                <label>AM01 - Itacoatiara</label>
            </value>
            <value>
                <fullName>BA01</fullName>
                <label>BA01 - Luis Eduardo Magalhães</label>
            </value>
            <value>
                <fullName>BA02</fullName>
                <label>BA02 - Candeias</label>
            </value>
            <value>
                <fullName>BA03</fullName>
                <label>BA03 - Feira de Santana</label>
            </value>
            <value>
                <fullName>BA04</fullName>
                <label>BA04 - Camaçari</label>
            </value>
            <value>
                <fullName>BA05</fullName>
                <label>BA05 - Conceição do Jacuipe</label>
            </value>
            <value>
                <fullName>BA50</fullName>
                <label>BA50 - Barreiras</label>
            </value>
            <value>
                <fullName>BA51</fullName>
                <label>BA51 - Correntina</label>
            </value>
            <value>
                <fullName>BA52</fullName>
                <label>BA52 - Formosa do Rio Preto</label>
            </value>
            <value>
                <fullName>BA53</fullName>
                <label>BA53 - Riachão das Neves</label>
            </value>
            <value>
                <fullName>BA54</fullName>
                <label>BA54 - São Desidério</label>
            </value>
            <value>
                <fullName>ES01</fullName>
                <label>ES01 - Serra</label>
            </value>
            <value>
                <fullName>ES02</fullName>
                <label>ES02 - Viana</label>
            </value>
            <value>
                <fullName>ES03</fullName>
                <label>ES03 - Vitória</label>
            </value>
            <value>
                <fullName>ES04</fullName>
                <label>ES04 - Ibatiba</label>
            </value>
            <value>
                <fullName>GO01</fullName>
                <label>GO01 - Bom Jesus de Goiás</label>
            </value>
            <value>
                <fullName>GO02</fullName>
                <label>GO02 - Rio Verde</label>
            </value>
            <value>
                <fullName>GO03</fullName>
                <label>GO03 - Anápolis</label>
            </value>
            <value>
                <fullName>GO04</fullName>
                <label>GO04 - Catalão</label>
            </value>
            <value>
                <fullName>GO05</fullName>
                <label>GO05 - Formosa</label>
            </value>
            <value>
                <fullName>GO06</fullName>
                <label>GO06 - Aparecida de Goiania</label>
            </value>
            <value>
                <fullName>GO07</fullName>
                <label>GO07 - Goiatuba</label>
            </value>
            <value>
                <fullName>GO08</fullName>
                <label>GO08 - Cristalina</label>
            </value>
            <value>
                <fullName>GO09</fullName>
                <label>GO09 - Itumbiara</label>
            </value>
            <value>
                <fullName>GO10</fullName>
                <label>GO10 - Jataí</label>
            </value>
            <value>
                <fullName>GO11</fullName>
                <label>GO11 - Posse</label>
            </value>
            <value>
                <fullName>MA01</fullName>
                <label>MA01 - São Luis</label>
            </value>
            <value>
                <fullName>MA02</fullName>
                <label>MA02 - Açailândia</label>
            </value>
            <value>
                <fullName>MA03</fullName>
                <label>MA03 - Alto Parnaíba</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>