force-app/main/default/objects/BusinessAccount/fields/PMC_SS_SAPCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SAPCustomerNumber__c</fullName>
    <description>The SAP Generated Customer Number</description>
    <externalId>true</externalId>
    <label>SAP Customer Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>