force-app/main/default/objects/BusinessAccount/fields/PMC_SS_SearchTerm__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SearchTerm__c</fullName>
    <label>Search Term</label>
    <length>20</length>
    <type>Text</type>
</CustomField>