force-app/main/default/objects/BusinessAccount/fields/PMC_SS_SellerVisa__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SellerVisa__c</fullName>
    <description>Brazilian Seller Visa</description>
    <label>Seller Visa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>