force-app/main/default/objects/BusinessAccount/fields/PMC_SS_SoldToAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SoldToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field on the Ship-to Account that is looking up to the Sold-to Account</description>
    <inlineHelpText>Provide the Sold-to customer for linking</inlineHelpText>
    <label>Sold-to partner related</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Sold-to</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sold-to partner related</relationshipLabel>
    <relationshipName>Shipto_Sold</relationshipName>
    <type>Lookup</type>
</CustomField>