force-app/main/default/objects/BusinessAccount/fields/PMC_SS_StateTaxNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_StateTaxNumber__c</fullName>
    <label>State Tax Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>