force-app/main/default/objects/BusinessAccount/fields/PMC_SS_ThreatsPlan__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ThreatsPlan__c</fullName>
    <description>Threats of the Account</description>
    <label>Threats (Plan)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>