force-app/main/default/objects/BusinessAccount/fields/PMC_SS_TonnageTaxable__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_TonnageTaxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tonnage Taxable</label>
    <type>Checkbox</type>
</CustomField>