force-app/main/default/objects/BusinessAccount/fields/PMC_SS_UnitofMeasure__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_UnitofMeasure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to capture account&apos;s unit of measure</description>
    <label>Unit of Measure</label>
    <referenceTo>UnitOfMeasure</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>