force-app/main/default/objects/BusinessAccount/fields/PMC_SS_Veson__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Veson__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Veson Customer</label>
    <type>Checkbox</type>
</CustomField>