force-app/main/default/objects/BusinessAccount/fields/PMC_SS_WeaknessesPlan__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_WeaknessesPlan__c</fullName>
    <description>Weaknesses of the Account.</description>
    <label>Weaknesses (Plan)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>