force-app/main/default/objects/BusinessAccount/fields/Products_Sold__c.field-meta.xml
<CustomField>
    <fullName>Products_Sold__c</fullName>
    <label>Products Sold</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_Sold</valueSetName>
    </valueSet>
</CustomField>