force-app/main/default/objects/BusinessAccount/fields/Sales_Channel_Attribute_5__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_Attribute_5__c</fullName>
    <label>Sales Channel – Attribute 5</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>10 – NAM</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11 – IS</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12 – ID</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13 – Canpotex</label>
            </value>
            <value>
                <fullName>5A</fullName>
                <label>5A – Attribute 5A</label>
            </value>
            <value>
                <fullName>5B</fullName>
                <label>5B – Attribute 5B</label>
            </value>
            <value>
                <fullName>5C</fullName>
                <label>5C – Wet ton invoice</label>
            </value>
            <value>
                <fullName>5D</fullName>
                <label>5D – Dry ton invoice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>