force-app/main/default/objects/BusinessAccount/fields/Sales_Potential__c.field-meta.xml
<CustomField>
    <fullName>Sales_Potential__c</fullName>
    <label>Sales Potential</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PMC_SS_Channel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 to 2 thousand Tons</fullName>
            </value>
            <value>
                <fullName>2 to 4 thousand Tons</fullName>
            </value>
            <value>
                <fullName>4 to 9 thousand Tons</fullName>
            </value>
            <value>
                <fullName>9 to 15 thousand Tons</fullName>
            </value>
            <value>
                <fullName>More than 15 thousand Tons</fullName>
            </value>
            <value>
                <fullName>0 to 1 thousand Tons</fullName>
            </value>
            <value>
                <fullName>1 to 10 thousand Tons</fullName>
            </value>
            <value>
                <fullName>More than 10 thousand Tons</fullName>
            </value>
            <value>
                <fullName>0 a 2 thousand tons</fullName>
                <isActive>false</isActive>
                <label>0 a 2 thousand tons</label>
            </value>
            <value>
                <fullName>2 a 4 thousand tons</fullName>
                <isActive>false</isActive>
                <label>2 a 4 thousand tons</label>
            </value>
            <value>
                <fullName>4 a 9 thousand tons</fullName>
                <isActive>false</isActive>
                <label>4 a 9 thousand tons</label>
            </value>
            <value>
                <fullName>9 a 15 thousand tons</fullName>
                <isActive>false</isActive>
                <label>9 a 15 thousand tons</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>