force-app/main/default/objects/BusinessAccount/fields/Shipto_partner_related__c.field-meta.xml
<CustomField>
    <fullName>Shipto_partner_related__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship-to partner related</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Ship-to, Ship-to</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Ship-to partner related)</relationshipLabel>
    <relationshipName>AccountsShipto</relationshipName>
    <type>Lookup</type>
</CustomField>