force-app/main/default/objects/BusinessAccount/fields/Team_Accounts_Attribute_4__c.field-meta.xml
<CustomField>
    <fullName>Team_Accounts_Attribute_4__c</fullName>
    <label>Team Accounts – Attribute 4</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>05</fullName>
                <label>05 – Team Accounts</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>