force-app/main/default/objects/BusinessAccount/fields/TSM_Manager_Account__c.field-meta.xml
<CustomField>
    <fullName>TSM_Manager_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RSM Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Other</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (TSM Manager)</relationshipLabel>
    <relationshipName>TSMManager</relationshipName>
    <type>Lookup</type>
</CustomField>